# mnemon

./: .env.example  .gitignore  README.md  pyproject.toml
agent_memory/: __init__.py  __main__.py  archiver.py  cli.py  context.py  decay.py  embeddings.py  entity_extraction.py  protocols.py  retrieval.py  store.py  tags.py  tracing.py  tuplespace.py  types.py
agent_memory/backends/: postgres.py  redis.py
agent_memory/server/: mcp_server.py
migrations/: 001_initial_schema.sql
tests/: conftest.py  test_archiver.py  test_context.py  test_entity_extraction.py  test_retrieval.py  test_store.py  test_tags.py  test_tuplespace.py
