[project]
name = "agent-memory"
version = "0.1.0"
description = "Framework-grade tiered memory system for AI agents — vendor-agnostic, backend-pluggable"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"
agent-memory-serve = "agent_memory.server.mcp_server:main"

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0"]
postgres = ["psycopg[binary,pool]>=3.1"]
embeddings = ["litellm>=1.50.0,<1.82"]
mcp = [
    "fastmcp>=2.0",
    "psycopg[binary,pool]>=3.1",
    "python-dotenv>=1.0",
    "litellm>=1.50.0,<1.82",
]
all = [
    "redis[hiredis]>=5.0",
    "psycopg[binary,pool]>=3.1",
    "litellm>=1.50.0,<1.82",
    "fastmcp>=2.0",
    "python-dotenv>=1.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.0",
]

[tool.ruff]
line-length = 150
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "SIM108", "SIM102", "SIM103", "SIM105", "SIM110", "RUF005"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff.lint.isort]
known-first-party = ["agent_memory"]
